website/websites/u64q/code/spectralnorm.1.scala.log

Sat, 19 Jun 2010 02:49:23 GMT

MAKE:
mv spectralnorm.scala spectralnorm.scala
mv: `spectralnorm.scala' and `spectralnorm.scala' are the same file
make: [spectralnorm.scala_run] Error 1 (ignored)
/usr/local/src/scala-2.8.0.RC6/bin/scalac spectralnorm.scala
spectralnorm.scala:18: error: not found: type double
   type Vector = Array[double]
                       ^
spectralnorm.scala:20: error: not found: type int
   def approximate(n: int)= {
                      ^
spectralnorm.scala:68: error: not found: type int
   def multiplyAtAv(n: int, v: Vector, atav: Vector) = {
                       ^
spectralnorm.scala:48: error: not found: type int
   def multiplyAv(n: int, v: Vector, av: Vector) = {
                     ^
spectralnorm.scala:58: error: not found: type int
   def multiplyAtv(n: int, v: Vector, atv: Vector) = {
                      ^
spectralnorm.scala:46: error: not found: type int
   def a(i: int, j: int) = 1.0/((i+j)*(i+j+1)/2 +i+1)
            ^
spectralnorm.scala:46: error: not found: type int
   def a(i: int, j: int) = 1.0/((i+j)*(i+j+1)/2 +i+1)
                    ^
7 errors found
make: [spectralnorm.scala_run] Error 1 (ignored)
2.98s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.6.0_18/bin/java -server  -Xbootclasspath/a:/usr/local/src/scala-2.8.0.RC6/lib/scala-library.jar spectralnorm 500

PROGRAM FAILED 


PROGRAM OUTPUT:

Exception in thread "main" java.lang.NoClassDefFoundError: spectralnorm
Caused by: java.lang.ClassNotFoundException: spectralnorm
	at java.net.URLClassLoader$1.run(URLClassLoader.java:202)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.net.URLClassLoader.findClass(URLClassLoader.java:190)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:307)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:301)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:248)
Could not find the main class: spectralnorm.  Program will exit.
